--- a/src/components/tw-settings-modal/settings-modal.css
+++ b/src/components/tw-settings-modal/settings-modal.css
@@ -1,4 +1,5 @@
 @import "../../css/colors.css";
+@import "../../css/filters.css";
 
 .modal-content {
     max-width: 750px;
@@ -76,6 +77,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    filter: $filter-icon-black;
 }
 
 .custom-stage-size > * {
